update to intra version

--- a/src/.env
+++ b/src/.env
@@ -1,8 +1,10 @@
-WP_USER_PASSWORD=bigsecret
-WP_BOSS_PASSWORD=smallsecret
+DB_NAME=wordpress
+
+WP_BG_PW=bigsecret
+WP_SG_PW=smallsecret
 WP_URL=mgraaf.42.fr
 
-WP_BOSS_LOGIN=BigGuy
-WP_USER_LOGIN=SmallGuy
+WP_BG_LOGIN=BigGuy
+WP_SG_LOGIN=SmallGuy
 TZ=Europe/Madrid
-ROOT_PASSWORD=rootpw
+ROOT_PW=rootpw
