--- a/src/requirements/mariadb/Dockerfile
+++ b/src/requirements/mariadb/Dockerfile
@@ -7,8 +7,6 @@ RUN apt-get install -y mariadb-server mariadb-client nano
 COPY tools/db_setup.sh /tmp/
 # COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d
 
-EXPOSE 3306
-
 RUN chmod +x /tmp/db_setup.sh
 
 # RUN service mysql start && chmod +x /tmp/db_setup.sh && mysql -uroot < /tmp/db_setup.sql
@@ -17,6 +15,4 @@ RUN sed 's/bind-address            = 127.0.0.1/bind-address            = 0.0.0.0
 RUN sed 's/skip-networking/#skip-networking/g' -i  /etc/mysql/mariadb.conf.d/50-server.cnf 
 
 
-ENTRYPOINT /tmp/db_setup.sh
-# CMD [ "mysqld" ]
-# CMD [ "tail -f /tmp/db_setup.sql" ]
+ENTRYPOINT ["/tmp/db_setup.sh"]
