--- a/src/requirements/nginx/conf/nginx.conf
+++ b/src/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,4 @@
-server {
-	listen				80;
-}
+
 
 server {
 	listen 443 ssl;
@@ -8,29 +6,41 @@ server {
 
 	server_name mgraaf.42.fr;
 
-	ssl_certificate     crt.crt;
-	ssl_certificate_key key.key;
+	ssl_certificate    /etc/nginx/crt.crt;
+	ssl_certificate_key /etc/nginx/key.key;
 
-    # ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-    # ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
 
 	index index.php;
 
 	root /var/www/wordpress;
 
-	autoindex off;
-
 	location / {
-		try_files $uri $uri/ = 404;
+		autoindex on;
+		try_files $uri $uri/ =404;
 	}
 
 	location ~ \.php$ {
-		# fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass wordpress:9000;
-        # fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        # fastcgi_param PATH_INFO $fastcgi_path_info;
-	}
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_pass wordpress:9000;
+		fastcgi_index index.php;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+	# autoindex off;
+
+	# location / {
+	# 	try_files $uri $uri/ = 404;
+	# }
+
+	# location ~ \.php$ {
+	# 	# fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    #     fastcgi_pass wordpress:9000;
+    #     # fastcgi_index index.php;
+    #     include fastcgi_params;
+    #     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    #     # fastcgi_param PATH_INFO $fastcgi_path_info;
+	# }
 }
